--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>nth-of-type generator</title>
 	<meta property="og:title" content="nth-of-type generator" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="ページのURL" />
-	<meta property="og:image" content="/ogImage.png" />
+	<meta property="og:url" content="https://h40831.github.io/nth-of-type-generator/" />
+	<meta property="og:image" content="https://h40831.github.io/nth-of-type-generator/ogImage.png" />
 	<meta property="og:site_name" content="nth-of-type generator" />
 	<meta property="og:description" content="CSSの疑似クラス nth-child / nth-last-child / nth-of-type / nty-last-of-type について、 感覚的に理解するためのジェネレータです。 CSSの学習にご活用ください。【使い方】1.縦方向に表示する要素の数を入力する。2.横方向に表示する要素の数を入力する。3.テストしたい擬似クラスを選択する。4.擬似クラスのカッコ内の指定方法を入力する。5.生成された要素をクリックすると、擬似クラスのカウント対象外に指定することができる。" />
 	<meta name="twitter:card" content="summary_large_image" />
