--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 	<meta property="og:site_name" content="nth-of-type generator" />
 	<meta property="og:description" content="CSSの疑似クラス nth-child / nth-last-child / nth-of-type / nty-last-of-type について、 感覚的に理解するためのジェネレータです。 CSSの学習にご活用ください。【使い方】1.縦方向に表示する要素の数を入力する。2.横方向に表示する要素の数を入力する。3.テストしたい擬似クラスを選択する。4.擬似クラスのカッコ内の指定方法を入力する。5.生成された要素をクリックすると、擬似クラスのカウント対象外に指定することができる。" />
 	<meta name="twitter:card" content="summary_large_image" />
-	<script src='vue.js'></script>  
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<script src='https://h40831.github.io/nth-of-type-generator/vue.js'></script>  
+	<link rel="stylesheet" type="text/css" href="https://h40831.github.io/nth-of-type-generator/index.css">
 </head>
 <body>	
 	<header>
@@ -51,6 +50,6 @@
 		</div>
 	</main>
 
-	<script src='index.js'></script>
+	<script src='https://h40831.github.io/nth-of-type-generator/index.js'></script>
 </body>
 </html>
