--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<meta name="twitter:card" content="summary_large_image" />
 	<script src='https://h40831.github.io/nth-of-type-generator/vue.js'></script>  
 	<link rel="stylesheet" type="text/css" href="https://h40831.github.io/nth-of-type-generator/index.css">
+	<link rel="shortcut icon" type="image/x-icon" href="https://h40831.github.io/nth-of-type-generator/favicon.ico">
 </head>
 <body>	
 	<header>
