--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 			)</span>
 		</nav>
 	</header>
-
 	<main id="testArea">
 		<style type="text/css">
 			{{ style }}
@@ -50,6 +49,17 @@
 		<div v-html="element">
 		</div>
 	</main>
+	<div class="ad">
+		<!-- admax -->
+		<script src="https://adm.shinobi.jp/s/0bc422403957c9783502b9aa6a3a582b"></script>
+		<!-- admax -->
+		<!-- admax -->
+		<script src="https://adm.shinobi.jp/s/7fbe1ce182340f4b9e6b4b37e4011039"></script>
+		<!-- admax -->
+		<!-- admax -->
+		<script src="https://adm.shinobi.jp/s/50d321fca4835e80c5000f5fc8c20b38"></script>
+		<!-- admax -->
+	</div>	
 
 	<script src='https://h40831.github.io/nth-of-type-generator/index.js'></script>
 </body>
