--- a/index.html
+++ b/index.html
@@ -52,12 +52,9 @@
 	<div class="ad">
 		<!-- admax -->
 		<script src="https://adm.shinobi.jp/s/0bc422403957c9783502b9aa6a3a582b"></script>
-		<!-- admax -->
-		<!-- admax -->
 		<script src="https://adm.shinobi.jp/s/7fbe1ce182340f4b9e6b4b37e4011039"></script>
-		<!-- admax -->
-		<!-- admax -->
 		<script src="https://adm.shinobi.jp/s/50d321fca4835e80c5000f5fc8c20b38"></script>
+		<script src="https://adm.shinobi.jp/s/c56658680d793d488e4f019785c1e49b"></script>
 		<!-- admax -->
 	</div>	
 
