--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta property="og:url" content="https://h40831.github.io/nth-of-type-generator/" />
 	<meta property="og:image" content="https://h40831.github.io/nth-of-type-generator/ogImage.png" />
 	<meta property="og:site_name" content="nth-of-type generator" />
-	<meta property="og:description" content="【使い方】1.タテ、ヨコそれぞれの要素の数を入力。<br>2.擬似クラスを選択し、()内を入力する。(odd、3nなど)<br>3.生成された要素をクリックして、セレクタの対象外に指定してみる。" />
+	<meta property="og:description" content="【使い方】　1.タテ、ヨコそれぞれの要素の数を入力。　2.擬似クラスを選択し、()内を入力する。(odd、3nなど)　3.生成された要素をクリックして、セレクタの対象外に指定してみる。" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<script src='https://h40831.github.io/nth-of-type-generator/vue.js'></script>  
 	<link rel="stylesheet" type="text/css" href="https://h40831.github.io/nth-of-type-generator/index.css">
